fix: Adding more spacing to the Faqs items

--- a/frontend/src/pages/Faqs/Faq.module.css
+++ b/frontend/src/pages/Faqs/Faq.module.css
@@ -5,13 +5,13 @@ summary {
 details {
    margin-bottom: 1rem;
    border-bottom: 1px solid var(--primary-dark);
-   padding-bottom: 0.5rem;
+   padding-bottom: 1rem;
 }
 
 details p {
    padding-inline: 0.5rem;
    font-size: 17px;
-   margin-top: 0.2rem;
+   margin-top: 0.4rem;
    font-weight: 300;
 }
 
